tests/errors/sem8.kt
fun main(){
    println("hi" > 3)
}